fix scrollbar styling

--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 html {
   @apply h-full;
 }
@@ -14,22 +15,23 @@ main {
   @apply h-full;
 }
 
-@layer components {
-  .scrollbar::-webkit-scrollbar {
-    @apply w-2;
-  }
+*::-webkit-scrollbar {
+  width: 0.5rem;
+  height: 1rem;
+}
 
-  .scrollbar::-webkit-scrollbar-track {
-    @apply bg-[#233138];
-    @apply rounded-lg;
-  }
+*::-webkit-scrollbar-track {
+  background: #233138;
+  border: 1px solid transparent;
+  border-radius: 8px;
+}
 
-  .scrollbar::-webkit-thumb {
-    @apply bg-[#121b21];
-    @apply rounded-lg;
-  }
+*::-webkit-thumb {
+  background: #121b21;
+  border: 1px solid transparent;
+  border-radius: 8px;
+}
 
-  .scrollbar::-webkit-scrollbar-thumb:hover {
-    @apply bg-[#121b21];
-  }
+*::-webkit-scrollbar-thumb:hover {
+  background: #121b21;
 }
